--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" type="text/css" href="/Portfolio/assets/style.css"/>
+  <link rel="stylesheet" type="text/css" href="Portfolio/assets/style.css"/>
   <title>Portfolio</title>
 </head>
 <body>
@@ -24,12 +24,12 @@
   </header>
   <main>
     <section id="hero">
-      <img src="/Portfolio/assets/HP.jpg" alt="Hero Image" />
+      <img src="Portfolio/assets/HP.jpg" alt="Hero Image" />
       <div class="hero-content">
         <h1>Welcome to my portfolio</h1>
         <p class="hero-text">My name is Carlos Rodriguez and I'm a junior developer.</p>
         <div class="btn-download-container">
-          <a href="/Portfolio/assets/Carlos_Rodriguez_CV.pdf"
+          <a href="Portfolio/assets/Carlos_Rodriguez_CV.pdf"
            download="Carlos_Rodriguez_CV.pdf" class="btn-download">Download my CV</a> </div>
       </div>
     </section>
@@ -43,7 +43,7 @@
           I am eager to contribute my skills and continue learning in this dynamic field.</p>
         </div>
         <div class="image-holder">
-          <img src="/Portfolio/assets/Lego.png" alt="Lego Avatar">
+          <img src="Portfolio/assets/Lego.png" alt="Lego Avatar">
         </div>
       </div>
     </section>
@@ -51,27 +51,27 @@
       <h2>Projects</h2>
       <div class="project-cards">
         <div class="card">
-          <img src="/Portfolio/assets/NT.png" alt="Project 1" />
+          <img src="Portfolio/assets/NT.png" alt="Project 1" />
           <p>Note Taker</p>
         </div>
         <div class="card">
-          <img src="/Portfolio/assets/SVG.png" alt="Project 2" />
+          <img src="Portfolio/assets/SVG.png" alt="Project 2" />
           <p>SVG-image generator</p>
         </div>
         <div class="card">
-          <img src="/Portfolio/assets/PG.png" alt="Project 3" />
+          <img src="Portfolio/assets/PG.png" alt="Project 3" />
           <p>Password generator</p>
         </div>
         <div class="card">
-          <img src="/Portfolio/assets/RG.png" alt="Project 4" />
+          <img src="Portfolio/assets/RG.png" alt="Project 4" />
           <p>Readme.md generator</p>
         </div>
         <div class="card">
-          <img src="/Portfolio/assets/ET.png" alt="Project 5" />
+          <img src="Portfolio/assets/ET.png" alt="Project 5" />
           <p>SQL Employee Tracker</p>
         </div>
         <div class="card">
-          <img src="/Portfolio/assets/FmD.png" alt="Project 6" />
+          <img src="Portfolio/assets/FmD.png" alt="Project 6" />
           <p>Currency converter</p>
         </div>
       </div>
